--- a/welcomehomefront/src/app/globals.css
+++ b/welcomehomefront/src/app/globals.css
@@ -46,7 +46,7 @@
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
+  --background: oklch(0.198 0.003 17.429);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.141 0.005 285.823);
   --card-foreground: oklch(0.985 0 0);
@@ -128,3 +128,7 @@
   }
 }
 
+a {
+  color: inherit;
+  text-decoration: underline;
+}
